--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
                 <div class="container-fluid p-0">
                     <div class="row no-gutters">
                         <div class="col-4">
-                            <a class="portfolio-box" href="#services">
+                            <a class="portfolio-box" href="/henger.html">
 
-                                <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
+                                <img class="img-fluid" src="img/portfolio/thumbnails/trailer_image.jpg" alt="">
                                 <div class="portfolio-box-caption">
                                     <div class="project-name">
-                                        Navn Tjeneste
+                                        Leie av henger
                                     </div>
                                 </div>
                             </a>
@@ -112,7 +112,7 @@
                                     <h2 class="text-white">
                                         Iogmed
                                     </h2>
-                                  <h5 class="text-white-50 ">
+                                  <h5 class="text-white-50 d-none d-sm-block">
                                     - Det du trenger
                                   </h5>
                                 </div>
