--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="container-fluid p-0">
                     <div class="row no-gutters">
                         <div class="col-4">
-                            <a class="portfolio-box" href="/henger.html">
+                            <a class="portfolio-box" href="henger.html">
 
                                 <img class="img-fluid" src="img/portfolio/thumbnails/trailer_image.jpg" alt="">
                                 <div class="portfolio-box-caption">
