Added more sub pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>iogmed</title>
 
     <!-- Font Awesome Icons -->
     <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
@@ -74,21 +74,21 @@
                             </a>
                         </div>
                         <div class="col-4">
-                            <a class="portfolio-box" href="#services">
-                                <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
+                            <a class="portfolio-box" href="it.html">
+                                <img class="img-fluid" src="img/portfolio/thumbnails/tablet_image.jpg" alt="">
                                 <div class="portfolio-box-caption">
                                     <div class="project-name">
-                                        Navn Tjeneste
+                                        IT
                                     </div>
                                 </div>
                             </a>
                         </div>
-                        <div class="col-4">
-                            <a class="portfolio-box" href="#services">
-                                <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
+                        <div class="col-4 img-fit">
+                            <a class="portfolio-box" href="trefelling.html">
+                                <img class="img-fluid" src="img/portfolio/thumbnails/motorsag.jpg" alt="">
                                 <div class="portfolio-box-caption">
                                     <div class="project-name">
-                                        Navn Tjeneste
+                                        Trefelling
                                     </div>
                                 </div>
                             </a>
@@ -98,7 +98,7 @@
                                 <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
                                 <div class="portfolio-box-caption">
                                     <div class="project-name">
-                                        Navn Tjeneste
+                                        Dekk og Felg
                                     </div>
                                 </div>
                             </a>
@@ -109,8 +109,8 @@
                                 <div class="portfolio-box-caption">
                                     <div class="project-category text-white-50">
                                     </div>
-                                    <h2 class="text-white">
-                                        Iogmed
+                                        <h2 class="text-white brand-logo">
+                                        iogmed
                                     </h2>
                                   <h5 class="text-white-50 d-none d-sm-block">
                                     - Det du trenger
@@ -119,41 +119,41 @@
                             </a>
                         </div>
                         <div class="col-4">
-                            <a class="portfolio-box" href="#services">
+                            <a class="portfolio-box" href="snorydding.html">
                                 <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
                                 <div class="portfolio-box-caption p-3">
                                     <div class="project-name">
-                                        Navn Tjeneste
+                                        Snørydding
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col-4">
-                            <a class="portfolio-box" href="#services">
+                            <a class="portfolio-box" href="transport.html">
                                 <img class="img-fluid" src="img/portfolio/thumbnails/usb_image.jpg" alt="">
                                 <div class="portfolio-box-caption p-3">
                                     <div class="project-name">
-                                        Navn Tjeneste
+                                        Transport
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col-4">
-                            <a class="portfolio-box" href="#services">
+                            <a class="portfolio-box" href=bilpleie.html>
                                 <img class="img-fluid" src="img/portfolio/thumbnails/digger_image.jpg" alt="">
                                 <div class="portfolio-box-caption p-3">
                                     <div class="project-name">
-                                        Navn Tjeneste
+                                        Bilpleie
                                     </div>
                                 </div>
                             </a>
                         </div>
                         <div class="col-4">
-                            <a class="portfolio-box" href="#services">
-                                <img class="img-fluid" src="img/portfolio/thumbnails/tablet_image.jpg" alt="">
+                            <a class="portfolio-box" href="vedlikeholdstjenester.html">
+                                <img class="img-fluid img-fit" src="img/portfolio/thumbnails/1.jpg" alt="">
                                 <div class="portfolio-box-caption p-3">
                                     <div class="project-name">
-                                        Navn Tjeneste
+                                        Vedlikeholds&shy;tjenester
                                     </div>
                                 </div>
                             </a>
