--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                         </div>
                         <div class="col-4">
                             <a class="portfolio-box" href="it.html">
-                                <img class="img-fluid" src="img/portfolio/thumbnails/tablet_image.jpg" alt="">
+                                <img class="img-fluid" src="img/portfolio/thumbnails/it.jpg" alt="">
                                 <div class="portfolio-box-caption">
                                     <div class="project-name">
                                         IT
@@ -104,17 +104,14 @@
                             </a>
                         </div>
                         <div class="col-4">
-                            <a class="company-name-box" href="#services">
-                                <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
+                            <a class="portfolio-box" href="#services">
+                                <img class="img-fluid logo-opacity" src="img/portfolio/thumbnails/white.jpg" alt="">
                                 <div class="portfolio-box-caption">
-                                    <div class="project-category text-white-50">
-                                    </div>
+                                    <div class="text-white-50">
                                         <h2 class="text-white brand-logo">
-                                        iogmed
-                                    </h2>
-                                  <h5 class="text-white-50 d-none d-sm-block">
-                                    - Det du trenger
-                                  </h5>
+                                            iogmed.no
+                                        </h2>
+                                    </div>
                                 </div>
                             </a>
                         </div>
